--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,9 @@ pytest-cov = "4.1.0"
 jupyterlab = "^4.0.2"
 typing-extensions = "^4.6.3"
 python-semantic-release = "^7.34.6"
+myst-nb = {version = "^0.17.2", python = "~3.10"}
+sphinx-autoapi = "^2.1.1"
+sphinx-rtd-theme = "^1.2.2"
 
 [build-system]
 requires = ["poetry-core"]
