--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "modelsight"
-version = "0.1.0"
+version = "0.2.0"
 description = "Better insights into Machine Learning models performance"
 authors = ["Francesco Pisu"]
 license = "GNU General Public License v3.0"
@@ -39,3 +39,4 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.semantic_release]
 version_variable = "pyproject.toml:version"
+version_source = "tag"
