--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -7,8 +7,32 @@ build:
 
 # Configuration
 python:
-  version: 3.10.11
+  version: 3.10
   install:
     - requirements: docs/requirements.txt
     - method: pip
       path: .
+
+
+# Read the Docs configuration file for Sphinx projects
+# See https://docs.readthedocs.io/en/stable/config-file/v2.html for details
+
+# Required
+version: 2
+
+python:
+  install:
+    - method: pip
+      path: .
+      extra_requirements:
+        - docs
+
+# Set the OS, Python version and other tools you might need
+build:
+  os: ubuntu-22.04
+  tools:
+    python: "3.10"
+
+# Build documentation in the "docs/" directory with Sphinx
+sphinx:
+  configuration: docs/conf.py
