build: trying to fix rtd compilation error

--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -22,6 +22,7 @@ version: 2
 
 python:
   install:
+  requirements: docs/requirements.txt
     - method: pip
       path: .
       extra_requirements:
