--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,4 +47,4 @@ dist_path = "dist/"                         # where to put dists
 upload_to_release = true                    # auto-create GitHub release
 upload_to_pypi = false                      # don't auto-upload to PyPI
 remove_dist = false                         # don't remove dists
-patch_without_tag = false                    # patch release by default
+patch_without_tag = true                    # patch release by default
