--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -68,12 +68,10 @@ jobs:
               run: poetry install
             
             - name: Use Python Semantic Release to prepare release
-              env:
-                GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-              run: |
-                  git config user.name github-actions
-                  git config user.email github-actions@github.com
-                  poetry run semantic-release publish               
+              id: release
+              uses: python-semantic-release/python-semantic-release@v8.0.0
+              with:
+                github_token: ${{ secrets.GITHUB_TOKEN }}            
             
             - name: Publish to TestPyPi
               uses: pypa/gh-action-pypi-publish@release/v1
@@ -81,6 +79,7 @@ jobs:
                 user: __token__
                 password: ${{ secrets.TEST_PYPI_API_TOKEN }}
                 repository_url: https://test.pypi.org/legacy/
+              if: steps.release.outputs.released == 'true'
             
             - name: Test install from TestPyPI
               run: |
@@ -94,3 +93,10 @@ jobs:
               with:
                 user: __token__
                 password: ${{ secrets.PYPI_API_TOKEN }}
+              if: steps.release.outputs.released == 'true'
+            
+            - name: Publish package distributions to GitHub Releases
+              uses: python-semantic-release/upload-to-gh-release@main
+              if: steps.release.outputs.released == 'true'
+              with:
+                github_token: ${{ secrets.GITHUB_TOKEN }}
