--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -27,7 +27,7 @@ jobs:
               run: poetry install
             
             - name: Execute tests
-              run: poetry run python -m pytest -v tests/ --cov=src --cov-report=xml -rP
+              run: poetry run python -m pytest -v tests/ --cov=modelsight --cov-report=xml -rP
             
             - name: Upload coverage reports to Codecov
               uses: codecov/codecov-action@v3
